# mpl-office

./: .gitignore  Cargo.toml  LICENSE  README.md  Spec.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/mpl-office-core/: Cargo.toml
crates/mpl-office-core/src/: color.rs  coord.rs  emit.rs  error.rs  ir.rs  lib.rs  parse.rs  path.rs  style.rs  transform.rs
crates/mpl-office-py/: Cargo.toml
crates/mpl-office-py/src/: lib.rs
examples/: demo.py  demo_template.py
python/mpl_office/: __init__.py  _inject.py  backend.py  pptx.py
tests/: conftest.py  test_backend.py  test_images.py  test_matplotlib_e2e.py  test_matplotlib_gallery.py  test_pptx_roundtrip.py  test_smoke.py  test_templates.py
