[workspace]
resolver = "2"
members = [
    "crates/mpl-office-core",
    "crates/mpl-office-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["mpl-office contributors"]
repository = "https://github.com/dma/mpl-office"

[workspace.dependencies]
quick-xml = "0.36"
kurbo = "0.11"
thiserror = "1"
