[workspace]
resolver = "2"
members = [
    "crates/mpl-office-core",
    "crates/mpl-office-py",
]

[workspace.package]
version = "0.0.2"
edition = "2021"
license = "MIT"
authors = ["mpl-office contributors"]
repository = "https://github.com/dma/mpl-office"

[workspace.dependencies]
quick-xml = "0.36"
thiserror = "1"
base64 = "0.22"
