[package]
name = "mpl-office-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SVG to DrawingML converter core (pure Rust)"

[dependencies]
quick-xml.workspace = true
thiserror.workspace = true
base64.workspace = true
